--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -20,7 +20,7 @@ dset:
   channels: 2
   normalize: true
   metadata: ./metadata
-  sources: ['drums', 'bass', 'other', 'vocals']
+  sources: [ 'drums', 'bass', 'other', 'vocals' ]
   valid_samples: # valid dataset size
 
 test:
@@ -38,7 +38,7 @@ test:
 epochs: 360
 batch_size: 4
 max_batches:  # limit the number of batches per epoch, useful for debugging
-              # or if your dataset is gigantic.
+# or if your dataset is gigantic.
 optim:
   lr: 3e-4
   momentum: 0.9
@@ -53,7 +53,7 @@ debug: false
 valid_apply: true
 flag:
 save_every:
-weights: [1., 1., 1., 1.]  # weights over each source for the training/valid loss.
+weights: [ 1., 1., 1., 1. ]  # weights over each source for the training/valid loss.
 
 augment:
   shift_same: false
@@ -84,13 +84,13 @@ misc:
 # List of decay for EMA at batch or epoch level, e.g. 0.999.
 # Batch level EMA are kept on GPU for speed.
 ema:
-  epoch: []
-  batch: []
+  epoch: [ ]
+  batch: [ ]
 
 use_train_segment: true  # to remove
 model_segment:  # override the segment parameter for the model, usually 4 times the training segment.
 model: htdemucs  # see demucs/train.py for the possibilities, and config for each model hereafter.
-demucs:  # see demucs/demucs.py for a detailed description
+demucs: # see demucs/demucs.py for a detailed description
   # Channels
   channels: 64
   growth: 2
@@ -121,7 +121,7 @@ demucs:  # see demucs/demucs.py for a detailed description
   # Weight init
   rescale: 0.1
 
-hdemucs:  # see demucs/hdemucs.py for a detailed description
+hdemucs: # see demucs/hdemucs.py for a detailed description
   # Channels
   channels: 48
   channels_time:
@@ -138,7 +138,7 @@ hdemucs:  # see demucs/hdemucs.py for a detailed description
   hybrid: true
   hybrid_old: false
   # Frequency Branch
-  multi_freqs: []
+  multi_freqs: [ ]
   multi_freqs_depth: 3
   freq_emb: 0.2
   emb_scale: 10
@@ -164,7 +164,7 @@ hdemucs:  # see demucs/hdemucs.py for a detailed description
 
 # Torchaudio implementation of HDemucs
 torch_hdemucs:
-# Channels
+  # Channels
   channels: 48
   growth: 2
   # STFT
@@ -190,7 +190,7 @@ torch_hdemucs:
   dconv_lstm: 4
   dconv_init: 1e-3
 
-htdemucs:  # see demucs/htdemucs.py for a detailed description
+htdemucs: # see demucs/htdemucs.py for a detailed description
   # Channels
   channels: 48
   channels_time:
@@ -205,7 +205,7 @@ htdemucs:  # see demucs/htdemucs.py for a detailed description
   depth: 4
   rewrite: true
   # Frequency Branch
-  multi_freqs: []
+  multi_freqs: [ ]
   multi_freqs_depth: 3
   freq_emb: 0.2
   emb_scale: 10
@@ -242,7 +242,7 @@ htdemucs:  # see demucs/htdemucs.py for a detailed description
   t_weight_pos_embed: 1.0
   t_cape_mean_normalize: True
   t_cape_augment: True
-  t_cape_glob_loc_scale: [5000.0, 1.0, 1.4]
+  t_cape_glob_loc_scale: [ 5000.0, 1.0, 1.4 ]
   t_sin_random_shift: 0
   # ------------- norm before a transformer encoder
   t_norm_in: True
@@ -268,7 +268,7 @@ htdemucs:  # see demucs/htdemucs.py for a detailed description
   # Weight init
   rescale: 0.1
 
-svd:  # see svd.py for documentation
+svd: # see svd.py for documentation
   penalty: 0
   min_size: 0.1
   dim: 1
@@ -279,20 +279,20 @@ svd:  # see svd.py for documentation
   convtr: false
   bs: 1
 
-quant:  # quantization hyper params
+quant: # quantization hyper params
   diffq:    # diffq penalty, typically 1e-4 or 3e-4
   qat:      # use QAT with a fixed number of bits (not as good as diffq)
   min_size: 0.2
   group_size: 8
 
-dora:
-  dir: outputs
-  exclude: ["misc.*", "slurm.*", 'test.reval', 'flag']
+#dora:
+#  dir: outputs
+#  exclude: ["misc.*", "slurm.*", 'test.reval', 'flag']
 
 slurm:
   time: 4320
   constraint: volta32gb
-  setup: ['module load cudnn/v8.4.1.50-cuda.11.6 NCCL/2.11.4-6-cuda.11.6 cuda/11.6']
+  setup: [ 'module load cudnn/v8.4.1.50-cuda.11.6 NCCL/2.11.4-6-cuda.11.6 cuda/11.6' ]
 
 # Hydra config
 hydra:
